--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,6 +2,8 @@
     "navbar": {
         "atlas": "Atlas",
         "aboutUs": "About us",
+        "dishes": "Dishes",
+        "popularDishes": "Popular Dishes",
         "restaurants": "Restaurants",
         "popularRestaurants": "Popular Restaurants",
         "packages": "Packages",
