implement recommendation, add edit restaurant form

--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -50,7 +50,7 @@
         "cuisineFeatures": {
             "feature1Title": "Thiên Đường Ẩm Thực Đường Phố",
             "feature1Description": "Một thành phố nơi mỗi góc phố đều tràn ngập những hương vị nức mũi—từ những món ăn chợ đêm đến những quán nướng bên biển.",
-            "feature2Title": "Di Sản Trong Mỗi Bát",
+            "feature2Title": "Di Sản Trong Mỗi Bát Mì",
             "feature2Description": "Những công thức nấu ăn truyền thống suốt nhiều thế hệ giữ gìn linh hồn của Miền Trung Việt Nam trong mỗi sợi mì và nước dùng.",
             "feature3Title": "Hải Sản Tươi Từ Biển Đông",
             "feature3Description": "Những con cá mới bắt hàng ngày từ Biển Đông mang lại sự tươi mới không thể sánh được cho những món hải sản biểu tượng.",
