feat(i18n): add new translation keys and update components to use hooks

--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -22,7 +22,29 @@
         "cancel": "Hủy",
         "settings": "Cài đặt",
         "changePassword": "Đổi mật khẩu",
-        "logout": "Đăng xuất"
+        "logout": "Đăng xuất",
+        "editProfile": "Chỉnh sửa hồ sơ",
+        "saveChanges": "Lưu thay đổi",
+        "saving": "Đang lưu...",
+        "uploadAvatar": "Tải ảnh đại diện",
+        "uploading": "Đang tải lên...",
+        "avatarUploaded": "Tải ảnh đại diện thành công",
+        "avatarUploadError": "Lỗi khi tải ảnh lên",
+        "updateSuccess": "Cập nhật thông tin mới thành công",
+        "updateError": "Lỗi khi cập nhật hồ sơ",
+        "checkInfo": "Vui lòng kiểm tra lại thông tin",
+        "invalidInfo": "Thông tin không hợp lệ",
+        "fullNamePlaceholder": "Nhập họ và tên của bạn",
+        "selectGender": "Chọn giới tính",
+        "male": "Nam",
+        "female": "Nữ",
+        "other": "Khác",
+        "status": "Trạng thái",
+        "roles": "Vai trò",
+        "fullNameMinLength": "Tên phải có ít nhất 2 ký tự",
+        "dobPast": "Ngày sinh phải là ngày trong quá khứ",
+        "dobMinAge": "Tuổi phải từ 5 tuổi trở lên",
+        "dobInvalid": "Ngày sinh không hợp lệ"
     },
     "language": {
         "title": "Ngôn ngữ",
@@ -41,7 +63,34 @@
         "found": "Tìm thấy",
         "resultsText": "kết quả",
         "in": "trong",
-        "seconds": "giây"
+        "seconds": "giây",
+        "findTitle": "Khám Phá Ẩm Thực Đà Nẵng",
+        "findSubtitle": "Tìm kiếm nhà hàng yêu thích của bạn",
+        "noResults": "Không tìm thấy nhà hàng nào",
+        "noResultsDescription": "Chúng tôi không tìm thấy nhà hàng nào phù hợp với bộ lọc hiện tại của bạn.",
+        "filters": {
+            "title": "Bộ lọc",
+            "clear": "Xóa",
+            "clearAll": "Xóa tất cả",
+            "activeFilters": "Bộ lọc đang áp dụng",
+            "cuisineType": "Loại Ẩm Thực",
+            "clearCuisineFilter": "Xóa bộ lọc",
+            "ratings": "Đánh giá",
+            "minimumRating": "Đánh giá tối thiểu",
+            "maximumRating": "Đánh giá tối đa",
+            "star": "sao",
+            "stars": "sao",
+            "andUp": "trở lên",
+            "andDown": "trở xuống",
+            "min": "Tối thiểu",
+            "max": "Tối đa",
+            "setMinimumRating": "Đặt đánh giá tối thiểu là {{rating}} sao",
+            "setMaximumRating": "Đặt đánh giá tối đa là {{rating}} sao",
+            "clearMinimumRating": "Xóa đánh giá tối thiểu",
+            "clearMaximumRating": "Xóa đánh giá tối đa",
+            "minimum": "Tối thiểu",
+            "maximum": "Tối đa"
+        }
     },
     "notFound": {
         "title": "Trang Không Tồn Tại!",
@@ -67,6 +116,8 @@
         "vietnam": "Việt Nam",
         "reviews": "đánh giá",
         "noRestaurants": "Không có nhà hàng nào có sẵn tại thời điểm này.",
+        "noDishes": "Không có món ăn nào",
+        "errorLoadingRestaurants": "Không thể tải nhà hàng",
         "tryAgain": "Thử lại",
         "cuisineFeatures": {
             "feature1Title": "Thiên Đường Ẩm Thực Đường Phố",
@@ -117,6 +168,60 @@
         "footerMessage": "Với Danang Culinary Atlas, ẩm thực không chỉ là thức ăn – đó là một hành trình khám phá."
     },
     "auth": {
+        "login": {
+            "title": "Chào mừng",
+            "subtitle": "Đăng nhập bằng Email",
+            "email": "Email",
+            "password": "Mật khẩu",
+            "emailPlaceholder": "Nhập email của bạn",
+            "passwordPlaceholder": "******",
+            "forgotPassword": "Quên mật khẩu?",
+            "loginButton": "ĐĂNG NHẬP",
+            "loggingIn": "ĐANG ĐĂNG NHẬP",
+            "noAccount": "Bạn chưa có tài khoản?",
+            "registerNow": "Đăng ký ngay",
+            "description": "Hãy để hành trình của bạn không chỉ là ngắm cảnh — mà còn là một chuyến phiêu lưu ẩm thực rực rỡ và đậm đà hương vị."
+        },
+        "register": {
+            "title": "Đăng ký",
+            "subtitle": "Tạo tài khoản của bạn",
+            "email": "Email",
+            "password": "Mật khẩu",
+            "confirmPassword": "Xác nhận mật khẩu",
+            "emailPlaceholder": "Nhập email của bạn",
+            "passwordPlaceholder": "******",
+            "registerAs": "Đăng ký với vai trò",
+            "user": "Người dùng",
+            "vendor": "Chủ nhà hàng",
+            "userDescription": "Đăng ký tài khoản người dùng để khám phá ẩm thực Đà Nẵng.",
+            "vendorDescription": "Đăng ký tài khoản chủ nhà hàng để quản lý nhà hàng của bạn.",
+            "agreeTerms": "Tôi đồng ý với",
+            "termsAndConditions": "Điều khoản và Điều kiện",
+            "registerButton": "ĐĂNG KÝ",
+            "registering": "ĐANG ĐĂNG KÝ...",
+            "hasAccount": "Bạn đã có tài khoản?",
+            "loginNow": "Đăng nhập",
+            "success": "Đăng ký tài khoản thành công! Đang chuyển hướng...",
+            "error": "Đăng ký thất bại. Vui lòng thử lại.",
+            "description": "Tham gia cùng chúng tôi và khám phá những trải nghiệm ẩm thực tuyệt vời nhất tại Đà Nẵng."
+        },
+        "changePassword": {
+            "title": "Đổi mật khẩu",
+            "description": "Nhập mật khẩu hiện tại và mật khẩu mới để thay đổi mật khẩu của bạn.",
+            "currentPassword": "Mật khẩu hiện tại",
+            "newPassword": "Mật khẩu mới",
+            "confirmPassword": "Xác nhận lại mật khẩu",
+            "currentPasswordPlaceholder": "Nhập mật khẩu hiện tại",
+            "newPasswordPlaceholder": "Nhập mật khẩu mới",
+            "confirmPasswordPlaceholder": "Xác nhận mật khẩu mới",
+            "changeButton": "Đổi mật khẩu",
+            "changing": "Đang đổi mật khẩu...",
+            "success": "Thay đổi mật khẩu thành công",
+            "error": "Thay đổi mật khẩu thất bại",
+            "errorOccurred": "Có lỗi xảy ra. Vui lòng thử lại.",
+            "passwordMismatch": "Mật khẩu mới và xác nhận mật khẩu không khớp",
+            "passwordMinLength": "Mật khẩu phải có ít nhất 6 ký tự"
+        },
         "forgotPassword": {
             "title": "Quên mật khẩu?",
             "subtitle": "Nhập email để nhận link đặt lại mật khẩu",
@@ -265,5 +370,201 @@
                 "autoTrainingDesc": "Huấn luyện lại model theo lịch"
             }
         }
+    },
+    "footer": {
+        "company": {
+            "title": "Công ty",
+            "aboutUs": "Về chúng tôi",
+            "blog": "Blog",
+            "pressRoom": "Phòng báo chí",
+            "careers": "Tuyển dụng"
+        },
+        "help": {
+            "title": "Trợ giúp",
+            "contactUs": "Liên hệ chúng tôi",
+            "faqs": "Câu hỏi thường gặp",
+            "termsAndConditions": "Điều khoản và điều kiện",
+            "privacyPolicy": "Chính sách bảo mật",
+            "sitemap": "Sơ đồ trang web"
+        },
+        "contact": {
+            "title": "Liên hệ",
+            "companyName": "Danang Culinary Atlas"
+        },
+        "copyright": "Bản quyền 2025 Danang Culinary Atlas. Tất cả quyền được bảo lưu."
+    },
+    "dishes": {
+        "title": "Khám Phá Ẩm Thực Đà Nẵng",
+        "subtitle": "Hơn {{count}} món ăn đặc sắc từ các nhà hàng uy tín",
+        "subtitleEmpty": "Khám phá ẩm thực phong phú",
+        "searchPlaceholder": "Tìm kiếm món ăn, nhà hàng...",
+        "filters": "Bộ lọc",
+        "clearFilters": "Xóa",
+        "cuisineType": "Loại ẩm thực",
+        "priceRange": "Khoảng giá",
+        "sort": "Sắp xếp",
+        "sortNameAsc": "Tên A → Z",
+        "sortNameDesc": "Tên Z → A",
+        "sortPriceAsc": "Giá thấp → cao",
+        "sortPriceDesc": "Giá cao → thấp",
+        "found": "Tìm thấy",
+        "dishes": "món ăn",
+        "filter": "Lọc",
+        "loading": "Đang tải món ăn...",
+        "error": "Có lỗi xảy ra",
+        "errorMessage": "Không thể tải danh sách món ăn. Vui lòng thử lại sau.",
+        "noResults": "Không tìm thấy món ăn phù hợp",
+        "noResultsMessage": "Thử xóa bộ lọc hoặc tìm kiếm từ khóa khác",
+        "clearAllFilters": "Xóa bộ lọc",
+        "viewAll": "Xem tất cả món",
+        "apply": "Áp dụng",
+        "previous": "Trước",
+        "next": "Sau",
+        "available": "Còn hàng",
+        "unavailable": "Hết hàng",
+        "priceRanges": {
+            "under30k": "Dưới 30k",
+            "30k50k": "30k - 50k",
+            "50k100k": "50k - 100k",
+            "100k200k": "100k - 200k",
+            "over200k": "Trên 200k"
+        }
+    },
+    "atlas": {
+        "findingRoute": "Đang tìm đường...",
+        "routeError": "Không thể tìm đường đi. Vui lòng thử lại.",
+        "loadingRestaurants": "Đang tải nhà hàng...",
+        "yourLocation": "Vị trí của bạn",
+        "restaurantsFound": "nhà hàng được tìm thấy",
+        "restaurantsInView": "nhà hàng trong khu vực",
+        "restaurant": "nhà hàng",
+        "restaurants": "nhà hàng",
+        "noRestaurantsMatch": "Không có nhà hàng nào phù hợp với tìm kiếm của bạn",
+        "noRestaurantsInArea": "Không tìm thấy nhà hàng nào trong khu vực này",
+        "locationError": "Không thể lấy vị trí của bạn. Vui lòng cho phép truy cập vị trí.",
+        "locationNotSupported": "Trình duyệt của bạn không hỗ trợ định vị.",
+        "searchPlaceholder": "Tìm kiếm nhà hàng...",
+        "restaurantsFoundCount": "nhà hàng được tìm thấy",
+        "loadingRestaurantsList": "Đang tải nhà hàng...",
+        "failedToLoad": "Không thể tải nhà hàng",
+        "noRestaurantsFound": "Không tìm thấy nhà hàng nào",
+        "directions": "Chỉ đường",
+        "to": "Đến",
+        "distance": "Khoảng cách",
+        "duration": "Thời gian",
+        "stepByStepGuide": "Hướng dẫn từng bước",
+        "details": "Chi tiết"
+    },
+    "dishDetail": {
+        "loading": "Đang tải...",
+        "errorLoading": "Không thể tải thông tin món ăn",
+        "goBack": "Quay lại",
+        "available": "Còn món",
+        "unavailable": "Hết món",
+        "approved": "Đã được duyệt",
+        "pending": "Đang chờ duyệt",
+        "rejected": "Đã bị từ chối",
+        "images": "Hình ảnh món ăn",
+        "imageError": "Không thể tải hình ảnh",
+        "noImage": "Không có hình ảnh",
+        "description": "Mô tả món ăn",
+        "noDescription": "Chưa có mô tả cho món ăn này.",
+        "information": "Thông tin món ăn",
+        "price": "Giá",
+        "status": "Trạng thái",
+        "rejectionReason": "Lý do từ chối",
+        "viewRestaurant": "Xem nhà hàng"
+    },
+    "restaurantDetail": {
+        "loading": "Đang tải...",
+        "errorLoading": "Không thể tải thông tin nhà hàng",
+        "goBack": "Quay lại",
+        "reportRestaurant": "Báo cáo nhà hàng",
+        "reviews": "đánh giá",
+        "location": "Vị trí",
+        "menu": "Thực đơn",
+        "menuError": "Không thể tải thực đơn. Vui lòng thử lại sau.",
+        "noDishes": "Chưa có món ăn nào",
+        "menuWillUpdate": "Thực đơn sẽ được cập nhật sớm",
+        "dishesCount": "món",
+        "page": "Trang",
+        "of": "trên",
+        "previous": "Trước",
+        "next": "Tiếp",
+        "customerReview": "Đánh giá khách hàng",
+        "reviewsCount": "Đánh giá",
+        "noImageAvailable": "Không có hình ảnh",
+        "newReview": "Có đánh giá mới"
+    },
+    "dishCard": {
+        "noImage": "Không có hình ảnh",
+        "temporarilyUnavailable": "Tạm hết",
+        "available": "Còn món"
+    },
+    "reviews": {
+        "customerReviews": "Đánh giá khách hàng",
+        "noReviewsYet": "Chưa có đánh giá nào. Hãy là người đầu tiên chia sẻ trải nghiệm của bạn!",
+        "loadMore": "Tải thêm đánh giá",
+        "loading": "Đang tải...",
+        "writeReview": "Viết đánh giá...",
+        "uploadImages": "Tải hình ảnh",
+        "sendReview": "Gửi đánh giá",
+        "selectRating": "Vui lòng chọn đánh giá",
+        "writeReviewError": "Vui lòng viết đánh giá",
+        "reviewMinLength": "Đánh giá phải có ít nhất 2 ký tự",
+        "loginToReview": "Vui lòng đăng nhập để đăng đánh giá",
+        "mustLogin": "Bạn phải đăng nhập để chia sẻ trải nghiệm của bạn.",
+        "goToLogin": "Đi đến đăng nhập",
+        "waitForUpload": "Vui lòng đợi tất cả hình ảnh tải lên xong",
+        "someImagesFailed": "Một số hình ảnh tải lên thất bại. Vui lòng xóa chúng hoặc thử lại.",
+        "uploadFailed": "Tải hình ảnh thất bại",
+        "postSuccess": "Đánh giá đã được đăng thành công! ✨",
+        "postError": "Lỗi khi tạo đánh giá",
+        "noPermission": "Bạn không có quyền đăng đánh giá.",
+        "sessionExpired": "Phiên đăng nhập của bạn đã hết hạn. Vui lòng đăng nhập lại.",
+        "invalidData": "Dữ liệu đánh giá không hợp lệ.",
+        "postFailed": "Đăng đánh giá thất bại. Vui lòng thử lại.",
+        "unexpectedError": "Đã xảy ra lỗi không mong muốn.",
+        "edit": "Chỉnh sửa",
+        "delete": "Xóa",
+        "report": "Báo cáo",
+        "editReview": "Chỉnh sửa đánh giá",
+        "characters": "ký tự",
+        "cancel": "Hủy",
+        "save": "Lưu",
+        "saving": "Đang lưu...",
+        "editSuccess": "Đánh giá đã được cập nhật thành công!",
+        "editError": "Bạn chỉ có thể chỉnh sửa đánh giá của chính mình.",
+        "deleteReview": "Xóa đánh giá?",
+        "deleteConfirm": "Bạn có chắc muốn xóa đánh giá này? Hành động này không thể hoàn tác.",
+        "deleting": "Đang xóa...",
+        "deleteSuccess": "Đánh giá đã được xóa thành công!",
+        "deleteError": "Bạn chỉ có thể xóa đánh giá của chính mình.",
+        "deleteFailed": "Xóa đánh giá thất bại.",
+        "reportReview": "Báo cáo đánh giá",
+        "reportingReview": "Bạn đang báo cáo đánh giá của",
+        "reportReason": "Lý do báo cáo",
+        "reportReasonRequired": "Vui lòng nhập lý do báo cáo",
+        "reportReasonMinLength": "Lý do báo cáo phải có ít nhất 10 ký tự",
+        "reportReasonPlaceholder": "Ví dụ: Nội dung không phù hợp, spam, thông tin sai lệch...",
+        "reportNote": "Lưu ý: Báo cáo của bạn sẽ được xem xét bởi đội ngũ quản trị. Vui lòng cung cấp thông tin chính xác và trung thực.",
+        "reportRestaurant": "Báo cáo nhà hàng",
+        "reportingRestaurant": "Bạn đang báo cáo",
+        "reportDescription": "Vui lòng cung cấp lý do chi tiết để chúng tôi có thể xem xét báo cáo của bạn.",
+        "reportRestaurantPlaceholder": "Ví dụ: Đồ ăn mất vệ sinh, nhân viên phục vụ kém, không đúng địa chỉ...",
+        "sending": "Đang gửi...",
+        "sendReport": "Gửi báo cáo",
+        "restaurantResponse": "Phản hồi của nhà hàng",
+        "comment": "Bình luận",
+        "addImages": "Thêm hình ảnh"
+    },
+    "notifications": {
+        "title": "Thông báo",
+        "markAllAsRead": "Đánh dấu tất cả",
+        "noNotifications": "Không có thông báo nào",
+        "newNotificationsWillAppear": "Thông báo mới sẽ hiển thị tại đây",
+        "markAsRead": "Đánh dấu đã đọc",
+        "loading": "Đang tải...",
+        "loadMore": "Xem thêm"
     }
 }
