--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -409,6 +409,9 @@
         "sortPriceDesc": "Price High → Low",
         "found": "Found",
         "dishes": "dishes",
+        "dishesFor": "dishes for \"{{query}}\"",
+        "dishesMatching": "matching dishes",
+        "dishesTotal": "dishes",
         "filter": "Filter",
         "loading": "Loading dishes...",
         "error": "Error",
