--- a/public/locales/vi/common.json
+++ b/public/locales/vi/common.json
@@ -409,6 +409,9 @@
         "sortPriceDesc": "Giá cao → thấp",
         "found": "Tìm thấy",
         "dishes": "món ăn",
+        "dishesFor": "món ăn cho \"{{query}}\"",
+        "dishesMatching": "món ăn phù hợp",
+        "dishesTotal": "món ăn",
         "filter": "Lọc",
         "loading": "Đang tải món ăn...",
         "error": "Có lỗi xảy ra",
